--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <p> Jacob Jaurigue's Website </p>
    <img src="Personal Artifact.png">
   
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="https://a3.espncdn.com/combiner/i?img=%2Fi%2Fteamlogos%2Fnfl%2F500%2Fdet.png">
+    <title> Jacob Jaurigue's Website </title>
+  </head> 
 
 
 
