--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" href="https://a3.espncdn.com/combiner/i?img=%2Fi%2Fteamlogos%2Fnfl%2F500%2Fdet.png">
+    <link rel="icon" href="https://cdn.bleacherreport.net/images/team_logos/328x328/detroit_lions.png">
     <title> Jacob Jaurigue's Website </title>
   </head> 
 
