--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 
   <p> Jacob Jaurigue's Website </p>
+   <center>
    <img src="Personal Artifact.png">
-  
+  </center>
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="https://cdn.bleacherreport.net/images/team_logos/328x328/detroit_lions.png">
