added nav bar and style

--- a/index.html
+++ b/index.html
@@ -9,7 +9,36 @@
     <link rel="icon" href="https://cdn.bleacherreport.net/images/team_logos/328x328/detroit_lions.png">
     <title> Jacob Jaurigue's Website </title>
   </head> 
+  
+  <body>
+    <nav>
+      <li class="nav"><a href=""> Noun Project </a></li>
+      <li class="nav"><a href=""> Class </a></li>
+      <li class="nav"><a href="/"> Projects </a></li>
+<style>
+  nav{
+  list-style-type: none;
+  position: fixed;
+  background-color: #BDC4A7;
+    width: 100%;
+}
 
+li{
+  display: inline;
+  padding: 56px;
+ 
+}
+
+a{
+  text-decoration: none;
+  color: black;
+  font-size: 150%
+}
+
+li a:hover {
+  background-color: #3E6680
+}
+</style>
 
 
 </html>
