--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <body>
     <nav>
-      <li class="nav"><a href=""> Noun Project </a></li>
+      <li class="nav"><a href="noun.html"> Noun Project </a></li>
       <li class="nav"><a href=""> Class </a></li>
       <li class="nav"><a href="/"> Projects </a></li>
 <style>
