--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   
   <body>
     <nav>
-      <li class="nav"><a href="noun.html"> Noun Project </a></li>
-      <li class="nav"><a href=""> Class </a></li>
-      <li class="nav"><a href="/"> Projects </a></li>
+      <li class="nav"><a href=""> Home </a></li>
+      <li class="nav"><a href=""> Noun Project </a></li>
+      <li class="nav"><a href="/">  </a></li>
+      </nav>
+    
 <style>
   nav{
   list-style-type: none;
