--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <nav>
       <li class="nav"><a href=""> Home </a></li>
-      <li class="nav"><a href=""> Noun Project </a></li>
+      <li class="nav"><a href="noun.html"> Noun Project </a></li>
       <li class="nav"><a href="/">  </a></li>
       </nav>
     
