--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li class="nav"><a href="noun.html"> Noun Project </a></li>
       <li class="nav"><a href="/">  </a></li>
       </nav>
+  </body>
     
 <style>
   nav{
