--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav>
       <li class="nav"><a href=""> Home </a></li>
       <li class="nav"><a href="noun.html"> Noun Project </a></li>
-      <li class="nav"><a href="/">  </a></li>
+      <li class="nav"><a href="convince.html"> Convince Project </a></li>
       </nav>
   </body>
     
