--- a/convince.html
+++ b/convince.html
@@ -4,7 +4,7 @@
     <nav>
       <li class="nav"><a href=""> Home </a></li>
       <li class="nav"><a href="noun.html"> Noun Project </a></li>
-      <li class="nav"><a href=""> Convince Project </a></li>
+      <li class="nav"><a href="convince.html"> Convince Project </a></li>
       </nav>
       
     </center>
