--- a/convince.html
+++ b/convince.html
@@ -2,7 +2,7 @@
   
   <head>
     <nav>
-      <li class="nav"><a href=""> Home </a></li>
+      <li class="nav"><a href="index.html"> Home </a></li>
       <li class="nav"><a href="noun.html"> Noun Project </a></li>
       <li class="nav"><a href="convince.html"> Convince Project </a></li>
       </nav>
