--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 
+ <html>
+
   <p> Jacob Jaurigue's Website </p>
    <center>
    <img src="Personal Artifact.png">
@@ -15,10 +17,11 @@
       <li class="nav"><a href="index.html"> Home </a></li>
       <li class="nav"><a href="noun.html"> Noun Project </a></li>
       <li class="nav"><a href="convince.html"> Convince Project </a></li>
+      <li><a hreft="event/index.html"> Event Project </a><li>
       </nav>
   </body>
     
-<style>
+  <style>
   nav{
   list-style-type: none;
   position: fixed;
@@ -42,6 +45,8 @@ li a:hover {
   background-color: #3E6680
 }
 </style>
+
+</html>
 
 
 </html>
