--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li class="nav"><a href="index.html"> Home </a></li>
       <li class="nav"><a href="noun.html"> Noun Project </a></li>
       <li class="nav"><a href="convince.html"> Convince Project </a></li>
-      <li><a hreft="event/index.html"> Event Project </a><li>
+      <li class="nav"><a href="event/index.html"> Event Project </a><li>
       </nav>
   </body>
     
