--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li class="nav"><a href="noun.html"> Noun Project </a></li>
       <li class="nav"><a href="convince.html"> Convince Project </a></li>
       <li class="nav"><a href="restaurant.html"> Restaurant Project </a></li>
-      <li><a href="event.html"> Event Project </a><li>
+      <li class="nav"><a href="event.html"> Event Project </a><li>
       </nav>
   </body>
     
