--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <li class="nav"><a href="convince.html"> Convince Project </a></li>
       <li class="nav"><a href="restaurant.html"> Restaurant Project </a></li>
       <li class="nav"><a href="event.html"> Event Project </a><li>
+     <li class="nav"><a href="sportsteam.html"> Sports Team Project </a><li>
       </nav>
   </body>
     
