--- a/restaurant.html
+++ b/restaurant.html
@@ -5,7 +5,8 @@
       <li class="nav"><a href="noun.html"> Noun Project </a></li>
       <li class="nav"><a href="convince.html"> Convince Project </a></li>
       <li class="nav"><a href="restaurant.html"> Restaurant Project </a></li>
-      <li><a hreft="event/index.html"> Event Project </a><li>
+      <li class="nav"><a href="event.html"> Event Project </a><li>
+     <li class="nav"><a href="sportsteam.html"> Sports Team Project </a><li>
       </nav>
   <center>
 </head>
