--- a/sportsteam.html
+++ b/sportsteam.html
@@ -1,4 +1,12 @@
-html>
+<html>
+  <nav>
+      <li class="nav"><a href="index.html"> Home </a></li>
+      <li class="nav"><a href="noun.html"> Noun Project </a></li>
+      <li class="nav"><a href="convince.html"> Convince Project </a></li>
+      <li class="nav"><a href="restaurant.html"> Restaurant Project </a></li>
+      <li class="nav"><a href="event.html"> Event Project </a><li>
+     <li class="nav"><a href="sportsteam.html"> Sports Team Project </a><li>
+      </nav>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
