--- a/sportsteam.html
+++ b/sportsteam.html
@@ -230,8 +230,29 @@ var x = setInterval(function() {
   </html>
 
 <style> 
-  body{  background-image:url(https://www.easywallprints.com/upload/designs/background-with-soccer-balls-zoom-1.jpg);
+ body{  background-image:url(https://www.easywallprints.com/upload/designs/background-with-soccer-balls-zoom-1.jpg);
     background-size: cover;
+}
+nav{
+  list-style-type: none;
+  position: fixed;
+  background-color: black ;
+    width: 100%;
+}
+  
+  li{
+  display: inline;
+  padding: 56px;
+}
+
+a{
+  text-decoration: none;
+  color: gold;
+  font-size: 150%
+}
+
+li a:hover {
+  background-color: grey
 }
   
   .wrapper{
