--- a/restaurant.html
+++ b/restaurant.html
@@ -79,33 +79,29 @@
   
   <style>
     
-     nav{
+    body{  background-image:url(https://www.easywallprints.com/upload/designs/background-with-soccer-balls-zoom-1.jpg);
+    background-size: cover;
+}
+nav{
   list-style-type: none;
   position: fixed;
-  background-color: black;
+  background-color: black ;
     width: 100%;
 }
-
+  
 a{
   text-decoration: none;
-  color: red;
+  color: gold;
   font-size: 150%
 }
 
 li a:hover {
   background-color: grey
 }
-h1 {
-  color: #F83812;
-}
-
-body {
-  background-image:url(https://i.ytimg.com/vi/Ca3gt_DnDlY/maxresdefault.jpg);
-    background-size: cover;}
-
-.wrapper{
+  
+  .wrapper{
   display: grid;
-  height: 90px;
+  height: 90vh;
   grid-template:
     "A B C" auto
     "D";
@@ -114,24 +110,59 @@ body {
   grid-column-gap: 5px ;
 }
 div {
-  background-color: red;
-  border: solid 3px #2B2727
+  background-color: gold;
+  border: solid 3px black
 }
 
 .A {
-  grid-column: 1 / 4;
+  grid-column: 1 / 3;
+  
 }
 
 .B {
-  grid-area: 2 / 1 / 8 / 3;
+  grid-area: 2 / 1 / 3 / 3;
 }
 
 .C {
-  grid-area: 2 / 3 / 5 / 4;  
+  grid-area: 1 / 3 / 3 / 3;  
 }
 
-.D {
-  grid-area: 5 / 3 / 8 / 4;
+
+/* row line / column line / end row / end column */
+
+p {
+  text-align: center;
+  font-size: 45px;
+  margin-top: 0px;
 }
-    
+ 
+@media only screen and (max-width: 1024px) {
+  .wrapper{
+    flex-direction: column;
+  }
+  body {
+    background:black;
+    flex-direction: column;
+  }
+  .A {
+    border: solid;
+    color: gold;
+  }
+   .B {
+    border: solid;
+    color: gold;
+  }
+   .C {
+    border: solid;  
+    color: gold;
+  }
+  .D {
+    border: solid;
+    color: gold;
+  }
+div {
+  background-color: grey;
+  border: solid 3px gold;
+}
+  
   </style>
