--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li class="nav"><a href="restaurant.html"> Restaurant Project </a></li>
       <li class="nav"><a href="event.html"> Event Project </a><li>
      <li class="nav"><a href="sportsteam.html"> Sports Team Project </a><li>
+     <li class="nav"><a href="band.html"> Event Project </a><li>
       </nav>
   </body>
     
