--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li class="nav"><a href="event.html"> Event Project </a><li>
      <li class="nav"><a href="sportsteam.html"> Sports Team Project </a><li>
      <li class="nav"><a href="team/band.html"> Event Project </a><li>
+     <li class="nav"><a href="themepark/caillou.html"> Amusement Project </a><li>
       </nav>
   </body>
     
