--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <a href="restaurant.html">Restaurant Project</a>
       <a href="event/index.htm">Event Project</a>
       <a href="sportsteam.html">Sports Team Project</a>
-      <a href="band.html">Band Project</a>
+      <a href="team/band.html">Band Project</a>
+     <a href="themepark/caillou.html">Band Project</a>
     </div>
   </div> 
 </div>
