--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="event/index.htm">Event Project</a>
       <a href="sportsteam.html">Sports Team Project</a>
       <a href="team/band.html">Band Project</a>
-     <a href="themepark/caillou.html">Band Project</a>
+     <a href="themepark/caillou.html">Theme Park Project</a>
     </div>
   </div> 
 </div>
