--- a/index.html
+++ b/index.html
@@ -1,18 +1,8 @@
 <html>
 
  <html>
-
-  <p> Jacob Jaurigue's Website </p>
-   <center>
-   <img src="Personal Artifact.png">
-  </center>
-<head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" href="https://cdn.bleacherreport.net/images/team_logos/328x328/detroit_lions.png">
-    <title> Jacob Jaurigue's Website </title>
-  </head> 
-  
-  <header> <div class="navbar">
+  <header> 
+   <div class="navbar">
   <a href="index.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Past Projects 
@@ -27,9 +17,19 @@
       <a href="team/band.html">Band Project</a>
      <a href="themepark/caillou.html">Theme Park Project</a>
     </div>
-  </div> 
-</div>
   </header>
+    <body>
+  <p> Jacob Jaurigue's Website </p>
+   <center>
+   <img src="Personal Artifact.png">
+  </center>
+    </body>
+<head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="https://cdn.bleacherreport.net/images/team_logos/328x328/detroit_lions.png">
+    <title> Jacob Jaurigue's Website </title>
+  </head> 
+ 
     
   <style>
   /* Navbar container */
