--- a/themepark/caillou.html
+++ b/themepark/caillou.html
@@ -11,12 +11,12 @@
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-      <a href="noun.html">Noun Project</a>
-      <a href="convince.html">Convince Project</a>
-      <a href="restaurant.html">Restaurant Project</a>
-      <a href="event/index.htm">Event Project</a>
-      <a href="sportsteam.html">Sports Team Project</a>
-      <a href="band.html">Band Project</a>
+      <li class="nav"><a href="noun.html">Noun Project</a>
+      <li class="nav"><a href="convince.html">Convince Project</a>
+      <li class="nav"><a href="restaurant.html">Restaurant Project</a>
+      <li class="nav"><a href="event/index.htm">Event Project</a>
+      <li class="nav"><a href="sportsteam.html">Sports Team Project</a>
+      <li class="nav"><a href="band.html">Band Project</a>
     </div>
   </div> 
 </div>
