--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="event/index.htm">Event Project</a>
       <a href="sportsteam.html">Sports Team Project</a>
       <a href="team/band.html">Band Project</a>
-     <a href="themepark/caillou.html">Theme Park Project</a>
+     <a href="caillou.html">Theme Park Project</a>
     </div>
   </header>
     <body>
