--- a/caillou.html
+++ b/caillou.html
@@ -17,6 +17,7 @@
       <a href="event/index.htm">Event Project</a>
       <a href="sportsteam.html">Sports Team Project</a>
       <a href="band.html">Band Project</a>
+      <a href="caillou.html">Themepark Project</a>
     </div>
   </div> 
 </div>
