--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="sportsteam.html">Sports Team Project</a>
       <a href="team/band.html">Band Project</a>
      <a href="caillou.html">Theme Park Project</a>
+     <a href="store.html"> Store Project
     </div>
   </header>
     <body>
