--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <a href="sportsteam.html">Sports Team Project</a>
       <a href="team/band.html">Band Project</a>
      <a href="caillou.html">Theme Park Project</a>
-     <a href="store.html"> Store Project
+     <a href="store.html"> Store Project </a>
+      <a href="final.html"> Final Project </a>
     </div>
   </header>
     <body>
