--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="noun.html">Noun Project</a>
       <a href="convince.html">Convince Project</a>
       <a href="restaurant.html">Restaurant Project</a>
-      <a href="event/index.htm">Event Project</a>
+      <a href="event/index.html">Event Project</a>
       <a href="sportsteam.html">Sports Team Project</a>
       <a href="team/band.html">Band Project</a>
      <a href="caillou.html">Theme Park Project</a>
